--- a/Sklep/Sklep/Sklep.csproj
+++ b/Sklep/Sklep/Sklep.csproj
@@ -151,10 +151,15 @@
     <Compile Include="Migrations\202104130837539_add_AddDate.designer.cs">
       <DependentUpon>202104130837539_add_AddDate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202104200813441_add_FilmLength.cs" />
+    <Compile Include="Migrations\202104200813441_add_FilmLength.designer.cs">
+      <DependentUpon>202104200813441_add_FilmLength.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Film.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\IndexLongestViewModel.cs" />
     <Compile Include="ViewModels\IndexViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -194,6 +199,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202104130837539_add_AddDate.resx">
       <DependentUpon>202104130837539_add_AddDate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104200813441_add_FilmLength.resx">
+      <DependentUpon>202104200813441_add_FilmLength.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
